--- a/Identity/Views/_ViewImports.cshtml
+++ b/Identity/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Identity
 @using Identity.Models
+@using Microsoft.AspNetCore.Identity
+@addTagHelper Identity.CustomTagHelpers.*, Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
